NetBSD Problem Report #50578

From www@NetBSD.org  Tue Dec 22 19:00:46 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 786917A21F
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 22 Dec 2015 19:00:46 +0000 (UTC)
Message-Id: <20151222190045.A0B2D7AC9D@mollari.NetBSD.org>
Date: Tue, 22 Dec 2015 19:00:45 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.sbin/isdn/isdnd/exec.c:372: Resource leak
X-Send-Pr-Version: www-1.0

>Number:         50578
>Category:       bin
>Synopsis:       src/usr.sbin/isdn/isdnd/exec.c:372: Resource leak
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Dec 22 19:05:00 +0000 2015
>Closed-Date:    Wed Dec 23 10:57:10 +0000 2015
>Last-Modified:  Wed Dec 23 11:00:01 +0000 2015
>Originator:     David Binderman
>Release:        cvs dated 20151222
>Organization:
>Environment:
>Description:
[src/usr.sbin/isdn/isdnd/exec.c:372]: (error) Resource leak: fp

            if (nfp == NULL)
            {
                logit(LL_ERR, "ERROR, upd_callstat_file: cannot open for write %s, %s", buf, strerror(errno));
                return;
            }

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: bin-bug-people->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Wed, 23 Dec 2015 10:57:10 +0000
Responsible-Changed-Why:
Mine


State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Wed, 23 Dec 2015 10:57:10 +0000
State-Changed-Why:
Commited, thanks!


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50578 CVS commit: src/usr.sbin/isdn/isdnd
Date: Wed, 23 Dec 2015 10:56:29 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed Dec 23 10:56:29 UTC 2015

 Modified Files:
 	src/usr.sbin/isdn/isdnd: exec.c

 Log Message:
 David Binderman in PR 50578: fix resource leak in an error branch.


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/usr.sbin/isdn/isdnd/exec.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.