David Binderman in PR 50578: fix resource leak in an error branch.